{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 183,
  "lineage": "540659b5-3bfd-ad67-fb1a-1df5969fea2e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/networkInterfaces/nic-rdp-test",
            "internal_domain_name_suffix": "b5cgb4314zyu3oakjcat15uhrd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/virtualNetworks/vnet-transit/subnets/subnet-transit-vm"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "nic-rdp-test",
            "private_ip_address": "10.2.2.4",
            "private_ip_addresses": [
              "10.2.2.4"
            ],
            "resource_group_name": "rg-transit"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-rdp-test",
            "resource_group_name": "rg-transit",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf"
          },
          "dependencies": [
            "azurerm_resource_group.tr_rg",
            "azurerm_subnet.tr_vm_subnet",
            "azurerm_virtual_network.tr_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "vm_nic_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/networkInterfaces/nic-rdp-test|/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/networkSecurityGroups/nsg-rdp",
            "network_interface_id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/networkInterfaces/nic-rdp-test",
            "network_security_group_id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/networkSecurityGroups/nsg-rdp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.vm_nic",
            "azurerm_network_security_group.vm_nsg",
            "azurerm_resource_group.tr_rg",
            "azurerm_subnet.tr_vm_subnet",
            "azurerm_virtual_network.tr_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-dbw/providers/Microsoft.Network/networkSecurityGroups/nsg-private",
            "location": "eastus",
            "name": "nsg-private",
            "resource_group_name": "rg-dbw",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-private",
            "resource_group_name": "rg-dbw",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf"
          },
          "dependencies": [
            "azurerm_resource_group.ws_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-dbw/providers/Microsoft.Network/networkSecurityGroups/nsg-public",
            "location": "eastus",
            "name": "nsg-public",
            "resource_group_name": "rg-dbw",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-public",
            "resource_group_name": "rg-dbw",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf"
          },
          "dependencies": [
            "azurerm_resource_group.ws_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "transit",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/networkSecurityGroups/nsg-transit",
            "location": "eastus",
            "name": "nsg-transit",
            "resource_group_name": "rg-transit",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-transit",
            "resource_group_name": "rg-transit",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf"
          },
          "dependencies": [
            "azurerm_resource_group.tr_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/networkSecurityGroups/nsg-rdp",
            "location": "eastus",
            "name": "nsg-rdp",
            "resource_group_name": "rg-transit",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "134.238.163.206",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-rdp",
            "resource_group_name": "rg-transit",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf"
          },
          "dependencies": [
            "azurerm_resource_group.tr_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/publicIPAddresses/pip-rdp-test",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-rdp-test",
            "resource_group_name": "rg-transit",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.tr_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tr_pe_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.10.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/virtualNetworks/vnet-transit/subnets/subnet-transit-pe",
            "name": "subnet-transit-pe",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-transit",
            "virtual_network_name": "vnet-transit"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-transit-pe",
            "resource_group_name": "rg-transit",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf",
            "virtual_network_name": "vnet-transit"
          },
          "dependencies": [
            "azurerm_resource_group.tr_rg",
            "azurerm_virtual_network.tr_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tr_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "private",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/virtualNetworks/vnet-transit/subnets/private",
            "name": "private",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-transit",
            "virtual_network_name": "vnet-transit"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "private",
            "resource_group_name": "rg-transit",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf",
            "virtual_network_name": "vnet-transit"
          },
          "dependencies": [
            "azurerm_resource_group.tr_rg",
            "azurerm_virtual_network.tr_vnet"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/virtualNetworks/vnet-transit/subnets/public",
            "name": "public",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-transit",
            "virtual_network_name": "vnet-transit"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "public",
            "resource_group_name": "rg-transit",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf",
            "virtual_network_name": "vnet-transit"
          },
          "dependencies": [
            "azurerm_resource_group.tr_rg",
            "azurerm_virtual_network.tr_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tr_vm_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.2.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/virtualNetworks/vnet-transit/subnets/subnet-transit-vm",
            "name": "subnet-transit-vm",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-transit",
            "virtual_network_name": "vnet-transit"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-transit-vm",
            "resource_group_name": "rg-transit",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf",
            "virtual_network_name": "vnet-transit"
          },
          "dependencies": [
            "azurerm_resource_group.tr_rg",
            "azurerm_virtual_network.tr_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ws_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "endpoint",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-dbw/providers/Microsoft.Network/virtualNetworks/vnet-dbw/subnets/endpoint",
            "name": "endpoint",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dbw",
            "virtual_network_name": "vnet-dbw"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "endpoint",
            "resource_group_name": "rg-dbw",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf",
            "virtual_network_name": "vnet-dbw"
          },
          "dependencies": [
            "azurerm_resource_group.ws_rg",
            "azurerm_virtual_network.ws_vnet"
          ]
        },
        {
          "index_key": "private",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-dbw/providers/Microsoft.Network/virtualNetworks/vnet-dbw/subnets/private",
            "name": "private",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dbw",
            "virtual_network_name": "vnet-dbw"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "private",
            "resource_group_name": "rg-dbw",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf",
            "virtual_network_name": "vnet-dbw"
          },
          "dependencies": [
            "azurerm_resource_group.ws_rg",
            "azurerm_virtual_network.ws_vnet"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-dbw/providers/Microsoft.Network/virtualNetworks/vnet-dbw/subnets/public",
            "name": "public",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dbw",
            "virtual_network_name": "vnet-dbw"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "public",
            "resource_group_name": "rg-dbw",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf",
            "virtual_network_name": "vnet-dbw"
          },
          "dependencies": [
            "azurerm_resource_group.ws_rg",
            "azurerm_virtual_network.ws_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-dbw/providers/Microsoft.Network/virtualNetworks/vnet-dbw/subnets/private",
            "network_security_group_id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-dbw/providers/Microsoft.Network/networkSecurityGroups/nsg-private",
            "subnet_id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-dbw/providers/Microsoft.Network/virtualNetworks/vnet-dbw/subnets/private"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.private",
            "azurerm_resource_group.ws_rg",
            "azurerm_subnet.ws_subnet",
            "azurerm_virtual_network.ws_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-dbw/providers/Microsoft.Network/virtualNetworks/vnet-dbw/subnets/public",
            "network_security_group_id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-dbw/providers/Microsoft.Network/networkSecurityGroups/nsg-public",
            "subnet_id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-dbw/providers/Microsoft.Network/virtualNetworks/vnet-dbw/subnets/public"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.public",
            "azurerm_resource_group.ws_rg",
            "azurerm_subnet.ws_subnet",
            "azurerm_virtual_network.ws_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tr_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/virtualNetworks/vnet-transit/subnets/private",
            "network_security_group_id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/networkSecurityGroups/nsg-transit",
            "subnet_id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/virtualNetworks/vnet-transit/subnets/private"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.transit",
            "azurerm_resource_group.tr_rg",
            "azurerm_subnet.tr_subnet",
            "azurerm_virtual_network.tr_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tr_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/virtualNetworks/vnet-transit/subnets/public",
            "network_security_group_id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/networkSecurityGroups/nsg-transit",
            "subnet_id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/virtualNetworks/vnet-transit/subnets/public"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.transit",
            "azurerm_resource_group.tr_rg",
            "azurerm_subnet.tr_subnet",
            "azurerm_virtual_network.tr_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vm_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/virtualNetworks/vnet-transit/subnets/subnet-transit-pe",
            "network_security_group_id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/networkSecurityGroups/nsg-rdp",
            "subnet_id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/virtualNetworks/vnet-transit/subnets/subnet-transit-pe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.vm_nsg",
            "azurerm_resource_group.tr_rg",
            "azurerm_subnet.tr_pe_subnet",
            "azurerm_virtual_network.tr_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tr_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fb60c40f-f6bb-4e71-b80a-48813dfe878b",
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-transit/providers/Microsoft.Network/virtualNetworks/vnet-transit",
            "location": "eastus",
            "name": "vnet-transit",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-transit"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-transit",
            "resource_group_name": "rg-transit",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf"
          },
          "dependencies": [
            "azurerm_resource_group.tr_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "ws_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "46153e56-f269-4081-a835-6b69a4a6d3d8",
            "id": "/subscriptions/edd4cc45-85c7-4aec-8bf5-648062d519bf/resourceGroups/rg-dbw/providers/Microsoft.Network/virtualNetworks/vnet-dbw",
            "location": "eastus",
            "name": "vnet-dbw",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-dbw"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-dbw",
            "resource_group_name": "rg-dbw",
            "subscription_id": "edd4cc45-85c7-4aec-8bf5-648062d519bf"
          },
          "dependencies": [
            "azurerm_resource_group.ws_rg"
          ]
        }
      ]
    }
  ]
}